# Gen-AI-Course

./: .env  134. Building GENAI Apps.ipynb  137. Simple Gen AI App Using Ollama.ipynb  142. Building Chatbot With Message History Using Langchain.ipynb  146. Building Conversational Q&A Chatbot With Message History.ipynb  150. LLM Model Integration With Langchain.ipynb  151. Invoking And Batch Streaming With Langchain.ipynb  152. Implementing Tools in Langchain.ipynb  153. Messages Types In Langchain.ipynb  154. LLM Structured Output Using Pydantic.ipynb  157. Summarization Middleware.ipynb  167_pdf_chat_history.py  Groq chat.py  Insulin_label.pkl  S 33 Search Engine Tools And Agents.ipynb  S35 Text Summarization.ipynb  app.ipynb  app_reg.ipynb  document_loader.ipynb  exercise_label.pkl  food_intake_label.pkl  food_intake_one.pkl  groq.ipynb  hr.db  lanchain_v1.ipynb  main.py  member_one.pkl  model.h5  previous_medications.pkl  pyproject.toml  rag_qa.py  reg_model.h5  requirement.txt  requirements.txt  scaler.pkl  search_engine.py  serve.py  speech.txt  sql_app.py  sqllite.py  (+5 more)
.ipynb_checkpoints/: app-checkpoint.ipynb  document_loader-checkpoint.ipynb  main-checkpoint.py  main_reg-checkpoint.py
Faiss_index/: index.faiss  index.pkl
chroma_db/: chroma.sqlite3
logs/fit20251203-190638/train/: events.out.tfevents.1764769303.NITHIN.18180.0.v2
logs/fit20251203-190638/validation/: events.out.tfevents.1764769308.NITHIN.18180.1.v2
logs/fit20251203-191233/train/: events.out.tfevents.1764769354.NITHIN.18180.2.v2  events.out.tfevents.1764769378.NITHIN.18180.4.v2
(+47 files in other folders)
